--- a/src/Mapbender/PrintBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/PrintBundle/Resources/translations/messages.en.xlf
@@ -24,7 +24,7 @@
       </trans-unit>
       <trans-unit id="b503c1ddd7589ad46c6a0bfd6283f7ac" resname="mb.print.imageexport.class.description">
         <source>mb.print.imageexport.class.description</source>
-        <target>Image export description</target>
+        <target>Image Export allows you to export your current mapview. You can choose png or jpeg format.</target>
       </trans-unit>
       <trans-unit id="00bc41ceb94ec77c10f1f83f783198f4" resname="mb.print.imageexport.tag.image">
         <source>mb.print.imageexport.tag.image</source>
