--- a/src/Mapbender/PrintBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/PrintBundle/Resources/translations/messages.de.xlf
@@ -4,35 +4,35 @@
     <body>
       <trans-unit id="50fd9c4ef28186f1a9457f7fdb5a9884" resname="mb.print.imageexport.chooseformat">
         <source>mb.print.imageexport.chooseformat</source>
-        <target>Choose Export Format</target>
+        <target>Exportformat auswählen</target>
       </trans-unit>
       <trans-unit id="814be710cc84cc30f8e43a9a2ee9efdf" resname="mb.print.imageexport.popup.btn.ok">
         <source>mb.print.imageexport.popup.btn.ok</source>
-        <target>Export</target>
+        <target>Exportieren</target>
       </trans-unit>
       <trans-unit id="69badfa602a22fd9e1de85f345321abb" resname="mb.print.imageexport.popup.btn.cancel">
         <source>mb.print.imageexport.popup.btn.cancel</source>
-        <target>Cancel</target>
+        <target>Abbrechen</target>
       </trans-unit>
       <trans-unit id="95e1feff870b1aeaf9d2fba1cf105e12" resname="mb.print.imageexport.info.noactivelayer">
         <source>mb.print.imageexport.info.noactivelayer</source>
-        <target>No active layer!</target>
+        <target>Keine aktive Ebene!</target>
       </trans-unit>
       <trans-unit id="6bca6f7f34f01cc242ed9e94b644926c" resname="mb.print.imageexport.class.title">
         <source>mb.print.imageexport.class.title</source>
-        <target>Image export</target>
+        <target>Bildexport</target>
       </trans-unit>
       <trans-unit id="b503c1ddd7589ad46c6a0bfd6283f7ac" resname="mb.print.imageexport.class.description">
         <source>mb.print.imageexport.class.description</source>
-        <target>Image export description</target>
+        <target>Mit dem Bildexport kann die aktuelle Kartenansicht exportiert werden. Das Bild kann als png oder jpeg abgespeichert werden.</target>
       </trans-unit>
       <trans-unit id="00bc41ceb94ec77c10f1f83f783198f4" resname="mb.print.imageexport.tag.image">
         <source>mb.print.imageexport.tag.image</source>
-        <target>image</target>
+        <target>Bild</target>
       </trans-unit>
       <trans-unit id="78786322087e2e58a4b051347b64a8e7" resname="mb.print.imageexport.tag.export">
         <source>mb.print.imageexport.tag.export</source>
-        <target>export</target>
+        <target>Export</target>
       </trans-unit>
       <trans-unit id="d41936cd5e37b0ad88b7d95c3911578b" resname="mb.print.imageexport.tag.jpeg">
         <source>mb.print.imageexport.tag.jpeg</source>
