--- a/src/Mapbender/WmcBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/WmcBundle/Resources/translations/messages.de.xlf
@@ -60,11 +60,11 @@
       </trans-unit>
       <trans-unit id="6853f27563c23ed2b4e1be8e42b788aa" resname="mb.wmc.list.description">
         <source>mb.wmc.list.description</source>
-        <target>Beschreibung</target>
+        <target>Fügt WMC-Konfigurationen aus einer Auswahlbox zu der Applikation hinzu.</target>
       </trans-unit>
       <trans-unit id="1cbc6d988a8f10a8908c92bf0ba0d882" resname="mb.wmc.list.toggle">
         <source>mb.wmc.list.toggle</source>
-        <target>Umschalten öffentlich/privat WMC</target>
+        <target>Umschalten öffentliches/privates WMC</target>
       </trans-unit>
       <trans-unit id="3f37ac88e8a7ad09bb6494c20f6c7132" resname="mb.wmc.list.wmc_element">
         <source>mb.wmc.list.wmc_element</source>
@@ -96,7 +96,7 @@
       </trans-unit>
       <trans-unit id="329a1abceb8068b5dcdb4d63b46d2bd4" resname="mb.wmc.wmceditor.list.description">
         <source>mb.wmc.wmceditor.list.description</source>
-        <target>Beschreibung</target>
+        <target>Mit dem WMC Editor können Konfigurationen gespeichert und bearbeitet werden.</target>
       </trans-unit>
       <trans-unit id="82be49e5b51462edf1afdec84259533c" resname="mb.wmc.wmceditor.list.add_wmc">
         <source>mb.wmc.wmceditor.list.add_wmc</source>
@@ -128,7 +128,7 @@
       </trans-unit>
       <trans-unit id="1ac4a7a92d378d05f8b846a3f28a71b8" resname="mb.wmc.wmcloader.load_xml_wmc">
         <source>mb.wmc.wmcloader.load_xml_wmc</source>
-        <target>XML WMC laden</target>
+        <target>WMC-XML laden</target>
       </trans-unit>
       <trans-unit id="a47ee751707389dcacac6b86f1f552a9" resname="mb.wmc.wmcloader.id">
         <source>mb.wmc.wmcloader.id</source>
@@ -140,7 +140,7 @@
       </trans-unit>
       <trans-unit id="1744637607776d06471ee642aac7a900" resname="mb.wmc.wmcloader.description">
         <source>mb.wmc.wmcloader.description</source>
-        <target>Beschreibung</target>
+        <target>Die gespeicherten Konfigurationen können mit diesem Element geladen werden.</target>
       </trans-unit>
       <trans-unit id="50a0a43d7734636fdca90ac4e93c124b" resname="mb.wmc.wmcloader.view_wmc">
         <source>mb.wmc.wmcloader.view_wmc</source>
@@ -168,7 +168,7 @@
       </trans-unit>
       <trans-unit id="c6daaae020364a8d68cf735705392539" resname="mb.wmc.suggestmap.class.title">
         <source>mb.wmc.suggestmap.class.title</source>
-        <target>Karte weterempfehlen</target>
+        <target>Karte weiterempfehlen</target>
       </trans-unit>
       <trans-unit id="e14da0b27acc227abcb5e66ba639f6d3" resname="mb.wmc.suggestmap.class.description">
         <source>mb.wmc.suggestmap.class.description</source>
@@ -176,11 +176,11 @@
       </trans-unit>
       <trans-unit id="4c52975ab8325a81dbaf6f445fb2e4b4" resname="mb.wmc.suggestmap.tag.suggest">
         <source>mb.wmc.suggestmap.tag.suggest</source>
-        <target>empfehlen</target>
+        <target>Empfehlen</target>
       </trans-unit>
       <trans-unit id="bafb6d388b664a85037bf6ecc7f6ac88" resname="mb.wmc.suggestmap.tag.map">
         <source>mb.wmc.suggestmap.tag.map</source>
-        <target>karte</target>
+        <target>Karte</target>
       </trans-unit>
       <trans-unit id="4e0e50e3930c88c9fece9eb150c7feab" resname="mb.wmc.wmceditor.class.title">
         <source>mb.wmc.wmceditor.class.title</source>
@@ -188,59 +188,59 @@
       </trans-unit>
       <trans-unit id="b6d9a92724be41fbb79a84f42708290e" resname="mb.wmc.wmceditor.class.description">
         <source>mb.wmc.wmceditor.class.description</source>
-        <target>Erstellt und editiert WMC Dokumente</target>
+        <target>Erstellt und editiert WMC Dokumente.</target>
       </trans-unit>
       <trans-unit id="351cc8f67e3cb73c27792fba58ef9dd6" resname="mb.wmc.wmceditor.tag.wmc">
         <source>mb.wmc.wmceditor.tag.wmc</source>
-        <target>wmc</target>
+        <target>WMC</target>
       </trans-unit>
       <trans-unit id="fca0f4d9d0975e11d80a6525d89b88ff" resname="mb.wmc.wmceditor.tag.editor">
         <source>mb.wmc.wmceditor.tag.editor</source>
-        <target>editor</target>
+        <target>Editor</target>
       </trans-unit>
       <trans-unit id="c0fb789744235d2345389b651e413a51" resname="mb.wmc.wmclist.class.title">
         <source>mb.wmc.wmclist.class.title</source>
-        <target>WMC List</target>
+        <target>WMC Liste</target>
       </trans-unit>
       <trans-unit id="a466182b91e7c90e8e89e0a7017322ef" resname="mb.wmc.wmclist.class.description">
         <source>mb.wmc.wmclist.class.description</source>
-        <target>Loads an available WMC document into a map</target>
+        <target>Läd ein verfügbares WMC-Dokument in die Karte.</target>
       </trans-unit>
       <trans-unit id="3f95f9b38e9577764a01c2a600045872" resname="mb.wmc.wmclist.tag.wmc">
         <source>mb.wmc.wmclist.tag.wmc</source>
-        <target>wmc</target>
+        <target>WMC</target>
       </trans-unit>
       <trans-unit id="f522491b90f4a0868c31ec17e597d0d9" resname="mb.wmc.wmclist.tag.list">
         <source>mb.wmc.wmclist.tag.list</source>
-        <target>list</target>
+        <target>Liste</target>
       </trans-unit>
       <trans-unit id="042eee8054aa3baa9397244d38ad8228" resname="mb.wmc.wmcloader.class.title">
         <source>mb.wmc.wmcloader.class.title</source>
-        <target>WMC loader</target>
+        <target>WMC laden</target>
       </trans-unit>
       <trans-unit id="eb6f1e211f0c4fce0cb4e847844a7ca0" resname="mb.wmc.wmcloader.class.description">
         <source>mb.wmc.wmcloader.class.description</source>
-        <target>Loads WMC documents into a map</target>
+        <target>Läd ein WMC-Dokument in die Karte.</target>
       </trans-unit>
       <trans-unit id="fa367490fe08a5c455c902eb5714abe4" resname="mb.wmc.wmcloader.tag.wmc">
         <source>mb.wmc.wmcloader.tag.wmc</source>
-        <target>wmc</target>
+        <target>WMC</target>
       </trans-unit>
       <trans-unit id="a6b4b9511073b04b86ad123c593cd81b" resname="mb.wmc.wmcloader.tag.loader">
         <source>mb.wmc.wmcloader.tag.loader</source>
-        <target>loader</target>
+        <target>Laden</target>
       </trans-unit>
       <trans-unit id="84a803ca295fd79315c77052d5a0e120" resname="mb.wmc.error.wmcxmlloader_notallowed">
         <source>mb.wmc.error.wmcxmlloader_notallowed</source>
-        <target>WMC XML Loader ist nicht erlaubt.</target>
+        <target>WMC-XML laden ist nicht erlaubt.</target>
       </trans-unit>
       <trans-unit id="68ab6d8f3b2dc2a0020d23f40b639e97" resname="mb.wmc.error.wmclistloader_notallowed">
         <source>mb.wmc.error.wmclistloader_notallowed</source>
-        <target>WMC-List-Loader ist nicht erlaubt.</target>
+        <target>WMC-Listen laden ist nicht erlaubt.</target>
       </trans-unit>
       <trans-unit id="f48f2d39314f2615bdabbdd425a3aa44" resname="mb.wmc.error.wmcidloader_notallowed">
         <source>mb.wmc.error.wmcidloader_notallowed</source>
-        <target>WMC-ID-Loader ist nicht erlaubt.</target>
+        <target>WMC-ID laden ist nicht erlaubt.</target>
       </trans-unit>
       <trans-unit id="923c9f1ba7ebaa2623687b575533fd9e" resname="mb.wmc.error.wmcnotfound">
         <source>mb.wmc.error.wmcnotfound</source>
